[package]
name = "peckboard-api-plugin"
version = "0.2.0"
edition = "2024"
description = "Public, API-key-authenticated HTTP surface for Peckboard, served as a WASM plugin."
license = "MIT"
publish = false

[lib]
# Extism loads plugins as WASM cdylibs. The compiled artifact is
# `target/wasm32-unknown-unknown/release/peckboard_api_plugin.wasm`.
crate-type = ["cdylib"]

[dependencies]
# Extism Plugin Development Kit. Must stay major-version compatible with the
# host runtime Peckboard embeds (extism 1.x — see peckboard/Cargo.toml).
extism-pdk = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SHA-256 for hashing API-key secrets at rest (pure Rust, no_std → wasm-clean).
# Keys are stored hashed; the plaintext secret is only ever returned once on
# create. `default-features = false` keeps the wasm lean (no std/asm backends).
sha2 = { version = "0.10", default-features = false }

[profile.release]
# Smaller, self-contained wasm: strip and optimize for size. The sandbox
# memory limit is 128 MB, but a lean module loads faster.
opt-level = "s"
lto = true
strip = true
